--- a/challenge2/style.css
+++ b/challenge2/style.css
@@ -9,13 +9,25 @@ p,h1{
     margin: 0px;
     padding: 0px;
 }
+button{  
+    padding: 10px 20px 10px 20px ;
+    border-radius: 20px;
+    background-color:  hsl(0, 0%, 95%);
+    font-weight: 500;
+    font-family: 'lexend desa';
+}
+button:hover{
+    color: tomato;
+    cursor: pointer;
+}
+
 
 .card{
     display: flex;
     width: 100%;
     margin-top: 100px;
     justify-content: center;
-    color: rgba(240, 255, 255, 0.658);
+   
 
 }
 
@@ -32,6 +44,7 @@ p,h1{
 .card-title{
     margin-top: 40px;
     text-transform: uppercase;
+    color:  hsl(0, 0%, 95%);
     
 }
 .card-body{
@@ -40,17 +53,7 @@ p,h1{
     margin-top: 40px;
     padding-right: 70px;
     line-height: 1.8;
-}
-button{  
-    padding: 10px 20px 10px 20px ;
-    border-radius: 20px;
-    background-color: white;
-    font-weight: 500;
-    font-family: 'lexend desa';
-}
-button:hover{
-    color: tomato;
-    cursor: pointer;
+    color: hsla(0, 0%, 100%, 0.75);
 }
 
 
@@ -58,8 +61,8 @@ button:hover{
     margin-top: 80px;
 }
 .card-footer button:hover{
-    border:1px solid white;
-    color: white;
+    border:1px solid  hsl(0, 0%, 95%);
+    color:  hsl(0, 0%, 95%);
 }
 
 .card-first{
