--- a/Challenge3/style.css
+++ b/Challenge3/style.css
@@ -13,6 +13,11 @@ h2 {
   margin: 0px;
   padding: 0px;
 }
+textarea {
+  color: hsl(229, 23%, 23%);
+  color: hsl(227, 10%, 46%);
+  color: hsl(0, 0%, 59%);
+}
 .df {
   display: flex;
 }
@@ -27,17 +32,24 @@ h2 {
   justify-content: center;
 }
 .container {
+  /* background-repeat: no-repeat;
+  background-size: 100px 100px; */
+
+  background-image: url("images/bg-pattern-bottom.svg"),
+    url("images/bg-pattern-top.svg");
+
+  background-color: hsl(185, 75%, 39%);
+
   display: flex;
   width: 100%;
-  /* height: 100%; */
-  /* margin-top: 100px; */
   height: 100vh;
   justify-content: center;
   align-items: center;
 }
 
 .card {
-  background-color: red;
+  z-index: 2;
+  background-color: white;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -45,30 +57,56 @@ h2 {
 }
 
 .card-body {
-  padding: 60px 0px 20px 0px;
+  padding: 80px 0px 20px 0px;
 }
 .align-item-center {
   align-items: center;
 }
 
 .card-footer {
-  border-top: solid gray 1px;
-  padding: 40px;
+  border-top: solid rgb(150 150 150 / 29%) 1px;
+
+  padding: 20px 40px 20px 40px;
 }
+/* .img-div{
+  background-color: red;
+  width: 120px;
+  height: 120px;
+} */
 
 .img-pro {
-  /* background-color: purple; */
   margin-top: -45px;
   border-radius: 50%;
-  /* width: 30%; */
-
   position: absolute;
   width: 90px;
   height: 90px;
+  border: 10px solid white;
+  padding: 0px;
+  background-color: white;
 }
 svg {
   margin: 0px;
   padding: 0px;
   border-radius: 10px 10px 0px 0px;
 }
-
+.text-padd {
+  padding: 0px 2px 0px 2px;
+}
+.name {
+  font-weight: 700;
+  font-size: 18px;
+}
+.age {
+  font-weight: 400;
+  color: hsl(227, 10%, 46%);
+}
+.state {
+  margin-top: 10px;
+  color: hsl(0, 0%, 59%);
+  font-size: 10px;
+  letter-spacing: 1px;
+}
+.city {
+  margin-top: 10px;
+  color: hsl(227, 10%, 46%);
+}
