--- a/Challenge3/style.css
+++ b/Challenge3/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 html,
 body {
@@ -13,10 +14,9 @@ h2 {
   margin: 0px;
   padding: 0px;
 }
-textarea {
-  color: hsl(229, 23%, 23%);
-  color: hsl(227, 10%, 46%);
-  color: hsl(0, 0%, 59%);
+
+.align-item-center {
+  align-items: center;
 }
 .df {
   display: flex;
@@ -24,7 +24,6 @@ textarea {
 .flex-column {
   flex-direction: column;
 }
-
 .jc-around {
   justify-content: space-around;
 }
@@ -32,21 +31,17 @@ textarea {
   justify-content: center;
 }
 .container {
-  background-image: url("images/bg-pattern-top.svg") ,
-  url("images/bg-pattern-bottom.svg");
-    
-  background-position: top -334px left -20px , bottom -380px right -145px;
+  background-image: url("images/bg-pattern-top.svg"),
+                    url("images/bg-pattern-bottom.svg");
+
+  background-position: top -334px left -20px, bottom -380px right -145px;
   background-repeat: no-repeat;
   background-size: 721px 731px, 900px 700px;
-
+  position: fixed;
 
   background-color: hsl(185, 75%, 39%);
-
-  display: flex;
   width: 100%;
   height: 100vh;
-  justify-content: center;
-  align-items: center;
 }
 
 .card {
@@ -56,18 +51,16 @@ textarea {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 30px;
 }
 
 .card-body {
   padding: 80px 0px 20px 0px;
 }
-.align-item-center {
-  align-items: center;
-}
+
 
 .card-footer {
   border-top: solid rgb(150 150 150 / 29%) 1px;
-
   padding: 20px 40px 20px 40px;
 }
 
