--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -8,10 +8,13 @@ body,
 html {
   font-family: "Inter", "Lexend Deca", "SF Pro Display", "SF Pro Icons",
     "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
+  font-size: 17px;
   color: #1d1d1f;
   line-height: 1.47059;
   letter-spacing: -0.022em;
+  font-weight: 400;
+  color: #1d1d1f;
+font-style: normal;
 }
 
 body {
@@ -50,32 +53,42 @@ nav {
   align-items: center;
 }
 
+.center {
+  justify-content: center;
+}
+.align-self-center{
+  align-self: center;
+}
+.text-center {
+  text-align: center;
+}
+.flex-col {
+  flex-direction: column;
+}
+.jc-between {
+  justify-content: space-between;
+}
 /* ------------ */
-.navbar-black {
+.navbar-fixed {
   top: 0;
   position: fixed;
   width: 100%;
   overflow: hidden;
+}
+.navbar-dark{
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: saturate(180%) blur(20px);
   z-index: 100;
 }
-
-.navbar-black-sub {
+.navbar-content {
   height: 44px;
   max-width: 980px;
   margin: 0 auto;
 }
 .navbar-item {
-  font-size: 13px;
+  font-size: 13.5px;
   font-weight: 300;
-  align-self: center;
-}
-.nav-shop {
-  color: #4076d0;
-}
-.nav-shop:hover {
-  text-decoration: underline;
+  letter-spacing: -.01em;
 }
 .item-nav {
   color: #d7d7d7;
@@ -85,36 +98,23 @@ nav {
   opacity: 1;
   filter: brightness(400%);
 }
-.navbar-sub {
-  background-color: #f5f5f7;
-  padding: 3px 0px 3px 0px;
+.nav-shop {
+  color: #4076d0;
+}
+.nav-shop:hover {
+  text-decoration: underline;
 }
 
-.navbar-item-sub {
-  padding: 10px 0px 10px 0px;
+/* second navbar */
+.navbar-light{
+  background-color: #f5f5f7;
 }
-.navbar-item-sub p {
+.navbar-s {
+  padding: 12px 0;
   font-size: 14px;
 }
 
-.navbar-item i {
-  font-size: 20px;
-  color: #f5f5f7d8;
-}
-
-.center {
-  justify-content: center;
-}
-
-.center-col {
-  text-align: center;
-}
-.flex-col {
-  flex-direction: column;
-}
-.jc-between {
-  justify-content: space-between;
-}
+/*-------------*/
 .footbal {
   justify-content: space-between;
   align-items: center;
@@ -127,7 +127,6 @@ nav {
 }
 .grid-6 .title {
   font-size: 38px !important;
-
 }
 .grid-6 .title-sub {
   font-size: 21px !important;
@@ -135,6 +134,7 @@ nav {
 .grid-6 .title-link a {
   font-size: 17px !important;
 }
+/*--*/
 .dot {
   height: 18px;
   width: 18px;
@@ -142,7 +142,7 @@ nav {
   border-radius: 50%;
   margin-top: 4px;
 }
-.arrow-right {
+.triangle {
   width: 0;
   height: 0;
   border-top: 5px solid transparent;
@@ -152,18 +152,15 @@ nav {
   margin-top: 4px;
   margin-left: 7px;
 }
+/* -- */
 
 
-.arrow {
-  width: 30px;
-  height: 30px;
-}
 .title {
   margin-top: 55px;
   font-size: 50px !important;
-    line-height: 1.07143;
-    font-weight: 600;
-    letter-spacing: -.005em;
+  line-height: 1.07143;
+  font-weight: 600;
+  letter-spacing: -0.005em;
 }
 .title-sub {
   font-size: 25px;
@@ -174,13 +171,9 @@ nav {
   font-size: 17px;
   color: #86868b;
 }
-.title-link {
-  /* margin-top: 0px; */
-}
 
-.img-wide .title-link a{
-    color: #2895fc !important;
-
+.img-wide .title-link a {
+  color: #2895fc !important;
 }
 
 .title-link a {
@@ -206,19 +199,16 @@ nav {
 .bg-img2 {
   background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_large.jpg"); /* The image used */
   background-color: #cccccc; /* Used if the image is unavailable */
-
   background-position: bottom center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   height: 580px;
 }
 .bg-img3 {
-  background-image: url("../image/img1-l.jpg"); 
-  background-color: #cccccc; /* Used if the image is unavailable */
-
+  background-image: url("../image/img1-l.jpg");
+  background-color: #cccccc; 
   height: 580px;
-  background-position: bottom center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-
+  background-position: bottom center; 
+  background-repeat: no-repeat; 
 }
 
 .white-text .title,
@@ -231,37 +221,36 @@ nav {
 }
 /* grid */
 
+.grid-item {
+  height: 580px;
+}
+
 .child1 {
   background-image: url(../image/img3.jpg);
   background-color: #cccccc; /* Used if the image is unavailable */
-  background-position: bottom center; 
+  background-position: bottom center;
   background-repeat: no-repeat; /* Do not repeat the image */
   height: 580px;
 }
 
 .child2 {
   background-image: url(../image/promo_watch_series_6_lte__f8lrasjnry2y_large.jpg);
-  background-color: #cccccc; 
+  background-color: #cccccc;
   background-position: bottom center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
 
   height: 580px;
 }
 
-.grid-item{
-  height:580px ;
-}
+
 
 .child3 {
- 
   background-image: url(../image/fantazi.jpg);
   background-color: #cccccc;
   background-position: bottom center;
   background-repeat: no-repeat;
 
   height: 580px;
-
-
 }
 .child4 {
   background-image: url(../image/promo_arcade__e7ps46tldi62_large.jpg);
@@ -292,7 +281,7 @@ nav {
   grid-gap: 10px;
   padding: 10px 10px 10px 10px;
 }
-.grid-item{
+.grid-item {
   background-color: aquamarine;
 }
 
@@ -321,17 +310,11 @@ nav {
   background-position: center center;
   background-repeat: no-repeat;
   opacity: 1;
-  /* padding: 10px; */
   backdrop-filter: saturate(180%) blur(20px);
-  /* background-color: #4076d0; */
   height: 100%;
 }
-.testshop {
-  background-color: aqua;
-  width: 17px;
-  height: 44px;
-}
-.shopdiv {
+
+.icon-nav  {
   width: 17px;
   height: 44px;
   opacity: 0.8;
@@ -339,7 +322,9 @@ nav {
   transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.shopdiv:hover {
+
+
+.icon-nav :hover {
   opacity: 1;
   filter: brightness(100%);
 }
@@ -353,15 +338,6 @@ nav {
   filter: brightness(100%);
 }
 
-.search {
-  background-repeat: no-repeat;
-  background-size: 18px 88px;
-  /* background-size: 20px; */
-  background-image: url(../image/search.svg);
-  padding: 20px;
-  height: 88px;
-  width: 10px;
-}
 
 .right:after {
   content: "";
@@ -388,17 +364,8 @@ nav {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-span{
-  /* font-size: 40px !important;
-  overflow: hidden; */
-}
-.m1{
-  /* position: absolute;
-  font-size: 30px; */
-  /* margin-top: 120px; */
-}
-.m1::after{
-  
+
+.m1::after {
   content: "";
 
   display: inline-block;
@@ -410,7 +377,6 @@ span{
   -moz-transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
-
 }
 .right-grid:after {
   content: "";
@@ -425,7 +391,6 @@ span{
   transform: rotate(45deg);
 }
 
-
 .title-vasat {
   padding-top: 24px;
 }
@@ -437,7 +402,7 @@ span{
   letter-spacing: -0.01em;
   margin-bottom: 0.7em;
 }
-.footer-head{
+.footer-head {
   font-size: 12px !important;
 }
 .footer-body a {
@@ -504,7 +469,6 @@ li {
   text-decoration: underline;
 }
 .footer {
-
   max-width: 980px;
   margin: 0 auto;
 
@@ -522,12 +486,10 @@ footer {
   background-color: #f5f5f7;
 }
 
-.test{
+.test {
   object-fit: contain;
-
 }
 
-
-.sc::before{
-  content: ' \2197';
+.sc::before {
+  content: " \2197";
 }
