--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,7 +15,7 @@ html {
   letter-spacing: -0.022em;
   font-weight: 400;
   color: #1d1d1f;
-font-style: normal;
+  /* font-style: normal; */
 }
 
 body {
@@ -42,9 +43,6 @@ h5 {
   margin: 0px;
 }
 
-h2 {
-  font-size: 50px;
-}
 nav {
   margin: 0px;
   padding: 0px;
@@ -56,7 +54,7 @@ nav {
 .center {
   justify-content: center;
 }
-.align-self-center{
+.align-self-center {
   align-self: center;
 }
 .text-center {
@@ -75,7 +73,7 @@ nav {
   width: 100%;
   overflow: hidden;
 }
-.navbar-dark{
+.navbar-dark {
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: saturate(180%) blur(20px);
   z-index: 100;
@@ -88,7 +86,7 @@ nav {
 .navbar-item {
   font-size: 13.5px;
   font-weight: 300;
-  letter-spacing: -.01em;
+  letter-spacing: -0.01em;
 }
 .item-nav {
   color: #d7d7d7;
@@ -105,8 +103,22 @@ nav {
   text-decoration: underline;
 }
 
+.icon-nav {
+  width: 17px;
+  height: 44px;
+  opacity: 0.8;
+  -webkit-transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.icon-nav:hover {
+  opacity: 1;
+  filter: brightness(100%);
+}
+
 /* second navbar */
-.navbar-light{
+.navbar-light {
   background-color: #f5f5f7;
 }
 .navbar-s {
@@ -115,6 +127,26 @@ nav {
 }
 
 /*-------------*/
+
+.title {
+  padding-top: 55px;
+  /* margin-top: 56px; */
+  font-size: 56px !important;
+  line-height: 1.07143;
+  font-weight: 600;
+  letter-spacing: -0.005em;
+
+}
+.title-sub {
+  font-size: 25px;
+  margin-top: 6px;
+}
+.title-body {
+  margin-top: 5px;
+  font-size: 17px;
+  color: #86868b;
+}
+
 .footbal {
   justify-content: space-between;
   align-items: center;
@@ -125,13 +157,13 @@ nav {
   font-size: 40px;
   font-weight: 800px;
 }
-.grid-6 .title {
+.grid .title {
   font-size: 38px !important;
 }
-.grid-6 .title-sub {
+.grid .title-sub {
   font-size: 21px !important;
 }
-.grid-6 .title-link a {
+.grid .title-link a {
   font-size: 17px !important;
 }
 /*--*/
@@ -155,23 +187,6 @@ nav {
 /* -- */
 
 
-.title {
-  margin-top: 55px;
-  font-size: 50px !important;
-  line-height: 1.07143;
-  font-weight: 600;
-  letter-spacing: -0.005em;
-}
-.title-sub {
-  font-size: 25px;
-  margin-top: 6px;
-}
-.title-body {
-  margin-top: 5px;
-  font-size: 17px;
-  color: #86868b;
-}
-
 .img-wide .title-link a {
   color: #2895fc !important;
 }
@@ -194,7 +209,8 @@ nav {
   background-color: inherit; /* Used if the image is unavailable */
   background-position: bottom center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
-  height: 580px;
+  /* height: 580px; */
+  height: 569px;
 }
 .bg-img2 {
   background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_large.jpg"); /* The image used */
@@ -205,10 +221,10 @@ nav {
 }
 .bg-img3 {
   background-image: url("../image/img1-l.jpg");
-  background-color: #cccccc; 
+  background-color: #cccccc;
   height: 580px;
-  background-position: bottom center; 
-  background-repeat: no-repeat; 
+  background-position: bottom center;
+  background-repeat: no-repeat;
 }
 
 .white-text .title,
@@ -241,8 +257,6 @@ nav {
 
   height: 580px;
 }
-
-
 
 .child3 {
   background-image: url(../image/fantazi.jpg);
@@ -313,31 +327,6 @@ nav {
   backdrop-filter: saturate(180%) blur(20px);
   height: 100%;
 }
-
-.icon-nav  {
-  width: 17px;
-  height: 44px;
-  opacity: 0.8;
-  -webkit-transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
-  transition: opacity 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-
-.icon-nav :hover {
-  opacity: 1;
-  filter: brightness(100%);
-}
-.apple-logo {
-  margin-top: 4px;
-  opacity: 0.6;
-  transition: 0.5s;
-}
-.apple-logo:hover {
-  opacity: 1;
-  filter: brightness(100%);
-}
-
 
 .right:after {
   content: "";
