--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,15 +6,15 @@
 
 body,
 html {
-  font-family:  "SF Pro Display", "SF Pro Icons",
-    "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica",
+    "Arial", sans-serif;
   font-size: 17px;
   color: #1d1d1f;
   line-height: 1.47059;
-  letter-spacing: -0.022em;
+  letter-spacing: 0.022em;
   font-weight: 400;
   color: #1d1d1f;
-  /* font-style: normal; */
+  font-style: normal;
 }
 
 body {
@@ -129,24 +128,29 @@ nav {
 /*-------------*/
 
 .title {
-  padding-top: 55px;
-  /* margin-top: 56px; */
+  padding-top: 47px;
   font-size: 56px !important;
   line-height: 1.07143;
   font-weight: 600;
   letter-spacing: -0.005em;
-
 }
 .title-sub {
-  font-size: 25px;
+  font-size: 28px;
   margin-top: 6px;
+
+  line-height: 1.10722;
+  font-weight: 400;
+  letter-spacing: 0.004em;
 }
 .title-body {
   margin-top: 5px;
-  font-size: 17px;
+}
+.title-body p {
+  /* font-size: 17px; */
+  letter-spacing: 0.626px !important;
   color: #86868b;
 }
-
+/*----------------*/
 .footbal {
   justify-content: space-between;
   align-items: center;
@@ -186,7 +190,6 @@ nav {
 }
 /* -- */
 
-
 .img-wide .title-link a {
   color: #2895fc !important;
 }
@@ -206,21 +209,35 @@ nav {
 }
 .bg-img1 {
   background-image: url("../image/iphone_12_updated__jepm2xpxncuy_large.jpg");
-  background-color: inherit; /* Used if the image is unavailable */
-  background-position: bottom center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  /* height: 580px; */
-  height: 580px;
+  background-color: inherit;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  min-height: 580px;
 }
+
 
 
 .bg-img2 {
-  background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_large.jpg"); /* The image used */
-  background-color: #cccccc; /* Used if the image is unavailable */
-  background-position: bottom center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_large.jpg");
+  background-color: #cccccc;
+  background-position: bottom center;
+  background-repeat: no-repeat;
   height: 580px;
 }
+
+@media screen and (max-width: 1068px) {
+  .bg-img1{
+    background-image: url("../image/first.jpg");
+  }
+
+  .bg-img2{
+    background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_medium.jpg");
+  }
+  .bg-img3{
+    background-image: url("../image/img1-m.jpg");
+  }
+}
+
 .bg-img3 {
   background-image: url("../image/img1-l.jpg");
   background-color: #cccccc;
@@ -250,6 +267,16 @@ nav {
   background-repeat: no-repeat; /* Do not repeat the image */
   height: 580px;
 }
+
+
+/* a<--alan neshon mide--> */
+/* @media screen and (min-width: 1487px) {
+  body{
+    background-color: green !important;
+    padding:100px;
+  }
+} */
+
 
 .child2 {
   background-image: url(../image/promo_watch_series_6_lte__f8lrasjnry2y_large.jpg);
@@ -296,9 +323,6 @@ nav {
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 10px;
   padding: 10px 10px 10px 10px;
-}
-.grid-item {
-  background-color: aquamarine;
 }
 
 .grid-1-item {
@@ -363,8 +387,6 @@ nav {
   margin-top: 1.05em;
   width: 8px;
   height: 8px;
-  /* border-top: 2px solid #06c;
-  border-right: 2px solid #06c; */
   -moz-transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -484,4 +506,3 @@ footer {
 .sc::before {
   content: " \2197";
 }
-
