--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -223,7 +223,7 @@ nav {
   flex-direction: column; */
   /* justify-content: center; */
   /* align-items: center; */
-  max-width: 120rem;
+  max-width: 1500px;
   margin: 0 auto;
 }
 .section-white{
