--- a/challenge4/style.css
+++ b/challenge4/style.css
@@ -33,9 +33,9 @@ button {
   margin-top: 20px;
   padding: 10px 20px 10px 20px;
   border: none;
-  background-color: rgba(255, 255, 255, 0.562);
+  background-color: rgba(255, 255, 255, 0.219);
   border-radius: 7px;
-  opacity: 0.6;
+  /* opacity: 0.6; */
 
 }
 
