--- a/Apple/fonts.css
+++ b/Apple/fonts.css
@@ -1,8 +1,12 @@
+h2{
+	color: red !important;
+}
+
 @font-face {
 	font-family:'SF Pro Display';
 	font-style:normal;
 	font-weight:100;
-	src:local('☺'), url("wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight.woff2") format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight.ttf") format("truetype");
+	src:local('☺'), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight.woff2") format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight.ttf") format("truetype");
 	/* (C) 2019 Apple Inc. All rights reserved.
 	
  */
