--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -19,6 +19,7 @@ html {
 
 body {
   margin-top: 44px;
+ 
 }
 a {
   text-decoration: none;
@@ -209,26 +210,57 @@ nav {
 }
 .bg-img1 {
   background-image: url("../image/iphone_12_updated__jepm2xpxncuy_large.jpg");
+  /* background-image: url("../image/first.jpg"); */
+  /* background-image: url("../image/sec1/iphone_12_updated__jepm2xpxncuy_medium.jpg"); */
+  /* background-color: inherit;
   background-position: bottom center;
-  height: 580px;
-  background-size: 3010px 624px;
   background-repeat: no-repeat;
+  height: 580px; */
+  /* height: 590px;
+  background-size: 1068px 617px; */
+  /* height: 1060px;
+  height: 700px;
+  background-size: 1060px 700px; */
+
+  background-position: bottom center;
+height: 580px;
+background-size: 3010px 624px;
+background-repeat: no-repeat;
+ 
 }
 
 .bg-img2 {
+ 
   background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_large.jpg");
+
+
   background-position: bottom center;
-  height: 580px;
-  background-size: 3010px 624px;
-  background-repeat: no-repeat;
+height: 580px;
+background-size: 3010px 624px;
+background-repeat: no-repeat;
+
 }
 
 .bg-img3 {
-  background-position: bottom center;
-  height: 580px;
-  background-size: 3010px 624px;
-  background-repeat: no-repeat;
-  background-image: url("../image/sec3/hero_ipad_pro_non_avail__fcrsmhs4b7ma_large.jpg");
+  /* height: 580px; */
+/* height: 738px;
+background-size: 3008px 738px;
+background-image: url("../image/sec3/hero_ipad_pro_non_avail__fcrsmhs4b7ma_largetall.jpg");
+
+background-color: #cccccc;
+
+background-position: bottom center;
+background-repeat: no-repeat; */
+
+
+/* width: 3010px; */
+/* width: 100%; */
+
+background-position: bottom center;
+height: 580px;
+background-size: 3010px 624px;
+background-repeat: no-repeat;
+background-image: url("../image/sec3/hero_ipad_pro_non_avail__fcrsmhs4b7ma_large.jpg");
 }
 
 /* @media screen and (min-width: 1500px) {
@@ -256,36 +288,39 @@ nav {
   }
 } */
 .main [data-module-template="heroes"] .bg-img3 {
-  width: 3010px;
-  height: 624px;
-  background-size: 3010px 624px;
-  background-repeat: no-repeat;
-  background-image: url("../image/sec3/hero_ipad_pro_non_avail__fcrsmhs4b7ma_large.jpg");
-}
+    width: 3010px;
+    height: 624px;
+    background-size: 3010px 624px;
+    background-repeat: no-repeat;
+    background-image: url("../image/sec3/hero_ipad_pro_non_avail__fcrsmhs4b7ma_large.jpg");
+  }
 
-main {
+main{
   position: relative;
-  max-width: 2560px;
-  margin: 0 auto;
+    max-width: 2560px;
+    margin: 0 auto;
 }
 
-@media only screen and (min-width: 1069px) and (min-height: 776px) {
-  .bg-img1 {
+@media only screen and (min-width: 1069px) and (min-height: 776px){
+  .bg-img1{
     background-image: url("../image/sec1/iphone_12_updated__jepm2xpxncuy_largetall_2x.jpg");
     background-size: 3008px 738px !important;
     height: 738px !important;
   }
-  .bg-img2 {
+  .bg-img2{
     background-image: url("../image/iphone_12_pro_us__e5oyysg4k0ya_large.jpg") !important;
     background-size: 3008px 738px !important;
     height: 738px !important;
   }
-  .bg-img3 {
+  .bg-img3{
     background-image: url("../image/sec3/hero_ipad_pro_non_avail__fcrsmhs4b7ma_largetall.jpg");
     background-size: 3008px 738px !important;
     height: 738px !important;
   }
+
 }
+
+
 
 .white-text .title,
 .white-text .title-sub {
@@ -303,11 +338,12 @@ main {
 
 .child1 {
   background-image: url(../image/img3.jpg);
-
+ 
   background-position: bottom center;
   background-repeat: no-repeat; /* Do not repeat the image */
   height: 580px;
 }
+
 
 /* a<--alan neshon mide--> */
 /* @media screen and (min-width: 1487px) {
@@ -316,6 +352,7 @@ main {
     padding:100px;
   }
 } */
+
 
 .child2 {
   background-image: url(../image/promo_watch_series_6_lte__f8lrasjnry2y_large.jpg);
@@ -544,14 +581,4 @@ footer {
 
 .sc::before {
   content: " \2197";
-}
-
-
-@font-face {
-	font-family:'SF Pro Display';
-	font-style:normal;
-	font-weight:600;
-	src:local('☺'), url("/fonts/sf-pro-display_semibold.woff2") format("woff2"), url("/fonts/sf-pro-display_semibold.woff") format("woff"), url("/fonts/sf-pro-display_semibold.ttf") format("truetype");
-	/* (C) 2019 Apple Inc. All rights reserved.
- */
 }
