--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -133,6 +133,7 @@ nav {
   line-height: 1.07143;
   font-weight: 600;
   letter-spacing: -0.005em;
+  font-style: normal;
 }
 .title-sub {
   font-size: 28px;
