--- a/Apple/fonts.css
+++ b/Apple/fonts.css
@@ -1,3 +1,17 @@
+
+@font-face {
+	font-family:'SF Pro Display';
+	font-style:normal;
+	font-weight:600;
+	src:url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.woff2) format("woff2"), 
+	url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.woff) format("woff"),
+	 url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.ttf) format("truetype");
+
+}
+
+
+
+
 @font-face {
 	font-family:'SF Pro Display';
 	font-style:normal;
@@ -13,7 +27,7 @@
 	font-family:'SF Pro Display';
 	font-style:italic;
 	font-weight:100;
-	src:local('☺'), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight-italic.woff2") format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight-italic.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight-italic.ttf") format("truetype");
+	src:url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight-italic.woff2) format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight-italic.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_ultralight-italic.ttf") format("truetype");
 	/* (C) 2019 Apple Inc. All rights reserved.
  */
 }
@@ -111,15 +125,6 @@
 
 @font-face {
 	font-family:'SF Pro Display';
-	font-style:normal;
-	font-weight:600;
-	src:local('☺'), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.woff2") format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.ttf") format("truetype");
-	/* (C) 2019 Apple Inc. All rights reserved.
- */
-}
-
-@font-face {
-	font-family:'SF Pro Display';
 	font-style:italic;
 	font-weight:600;
 	src:local('☺'), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold-italic.woff2") format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold-italic.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold-italic.ttf") format("truetype");
@@ -129,7 +134,7 @@
 
 @font-face {
 	font-family:'SF Pro Display 600';
-	src:url('/wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.eot');
+	src:url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_semibold.eot);
 	/* (C) 2019 Apple Inc. All rights reserved.
  */
 }
