--- a/Apple/fonts.css
+++ b/Apple/fonts.css
@@ -9,7 +9,15 @@
 
 }
 
+@font-face {
+	font-family:'SF Pro Display';
+	font-style:italic;
+	font-weight:400;
+	src: url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff2) format("woff2"),
+	 url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff) format("woff"), 
+	 url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.ttf) format("truetype");
 
+}
 
 
 @font-face {
@@ -89,14 +97,7 @@
  */
 }
 
-@font-face {
-	font-family:'SF Pro Display';
-	font-style:italic;
-	font-weight:400;
-	src:local('☺'), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff2") format("woff2"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff") format("woff"), url("/wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.ttf") format("truetype");
-	/* (C) 2019 Apple Inc. All rights reserved.
- */
-}
+
 
 @font-face {
 	font-family:'SF Pro Display';
