--- a/Apple/fonts.css
+++ b/Apple/fonts.css
@@ -11,7 +11,7 @@
 
 @font-face {
 	font-family:'SF Pro Display';
-	font-style:italic;
+	font-style:normal;
 	font-weight:400;
 	src: url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff2) format("woff2"),
 	 url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff) format("woff"), 
