--- a/Apple/css/style.css
+++ b/Apple/css/style.css
@@ -149,10 +149,14 @@ nav {
 
 .title-body {
   margin-top: 5px;
+
 }
 .title-body p {
   letter-spacing: 0.626px !important;
   color: #86868b;
+  font-family: "SF Pro Text";
+  font-style: normal;
+  font-weight: 400;
 }
 /*----------------*/
 .footbal {
