--- a/Apple/fonts.css
+++ b/Apple/fonts.css
@@ -24,27 +24,12 @@
 }
 
 @font-face {
-	font-family: "SF Pro Text";
-	font-style: normal;
-	font-weight: 400;
-	src: url("./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.eot");
-	src: local("☺"),
-	  url("./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.woff2") format("woff2"),
-	  url("./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.woff") format("woff"),
-	  url("./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.ttf") format("truetype");
-
-  }
-
-@font-face {
-  font-family: "SF Pro Display";
-  font-style: italic;
+  font-family: "SF Pro Text";
+  font-style: normal;
   font-weight: 400;
-  src: url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff2)
-      format("woff2"),
-    url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.woff)
-      format("woff"),
-    url(wss/fonts/SF-Pro-Display/v3/sf-pro-display_regular-italic.ttf)
-      format("truetype");
+  src: url(./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.woff2) format("woff2"),
+    url(./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.woff) format("woff"),
+    url(./wss/fonts/SF-Pro-Text/v3/sf-pro-text_regular.ttf) format("truetype");
 }
 
 @font-face {
@@ -609,8 +594,6 @@
   /* (C) 2019 Apple Inc. All rights reserved.
  */
 }
-
-
 
 @font-face {
   font-family: "SF Pro Icons";
