--- a/challenge5/style.css
+++ b/challenge5/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .title h1 {
-  line-height: 3rem;
+  /* line-height: 3rem; */
   color: var(--verydark);
   font-weight: 700;
   font-size: 3rem;
@@ -78,12 +78,10 @@ body {
 
 
 .row1 {
-  /* height: 50vh; */
   display: flex;
-  margin: 40px 150px !important;
+  margin: 0 150px !important;
   display: flex;
   flex-wrap:wrap;
-  /* margin-bottom: 40px; */
 }
 
 .row1 .col-1 {
@@ -116,10 +114,7 @@ body {
     justify-content: center !important;
     height: 100% !important;
   }
-  .row2{
-    /* padding-top: 40px !important; */
-  }
-  
+
 }
 
 @media only screen and (max-width: 600px) {
