--- a/challenge5/style.css
+++ b/challenge5/style.css
@@ -1,12 +1,13 @@
-html{
+html {
   box-sizing: border-box;
 }
 
-*, *:after,*:before {
+*,
+*:after,
+*:before {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-
 }
 :root {
   --verydark: hsl(300, 43%, 22%);
@@ -26,6 +27,7 @@ body {
   border-radius: 10px;
   padding: 20px 70px 20px 30px;
   max-width: 470px;
+  margin-bottom: 20px;
 }
 .star p {
   margin-left: 20px;
@@ -37,28 +39,27 @@ body {
 .container {
   background-image: url("images/bg-pattern-top-desktop.svg"),
     url("images/bg-pattern-bottom-desktop.svg");
-
-  background-position: top 0 left 0
-  
-  , bottom 0 right 0;
+  background-position: top 0 left 0, bottom 0 right 0;
   background-repeat: no-repeat;
   background-size: 50% 50%, 70% 50%;
-
   background-color: white;
 
-  width: 100%;
   min-height: 100vh;
 
-    justify-content: center;
-  display: flex;
-  flex-direction: column;
 
 
+display: flex;
+align-items: center;
+justify-content: center;
+}
 
+.rows {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0 150px;
 }
 
 .title h1 {
-  /* line-height: 3rem; */
   color: var(--verydark);
   font-weight: 700;
   font-size: 3rem;
@@ -76,24 +77,26 @@ body {
   color: var(--verydark);
 }
 
-
 .row1 {
+
   display: flex;
-  margin: 0 150px !important;
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
 
 .row1 .col-1 {
   flex-grow: 1;
   flex-basis: 26rem;
-  padding-right:1rem;
+  padding-right: 1rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .row1 .col-2 {
   flex-grow: 1;
   flex-direction: column;
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  margin-top: 20px;
 }
 
 .col-2 .row-1 {
@@ -109,120 +112,137 @@ body {
   align-self: flex-end;
 }
 
-@media only screen and (max-width: 600px) {
+
+@media only screen and (min-width: 1200px) {
+  .row2 > div:first-child{
+    margin-right: 2rem;
+  }
+  
+  .row2 > div:last-child{
+   margin-left: 2rem;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
   .row2{
+        flex-wrap: wrap;
+  }
+  .card-s{
+    flex-basis: 100% !important;
+    flex-grow: 1 !important;
+  }
+  .card {
+    margin-top: 20px;
+  }
+  .rows{
+    padding:0;
+  }
+
+  .row1 {
+    margin: 5rem !important;
+  }
+  .row2 {
+    flex-wrap: wrap;
+    margin: 0 5rem !important;
+  }
+}
+
+
+@media only screen and (max-width: 600px) {
+  .rows{
+    padding:0;
+  }
+  .row2 {
     justify-content: center !important;
     height: 100% !important;
   }
-
-}
-
-@media only screen and (max-width: 600px) {
-
- .stars{
-   text-align: center;
- }
- .star img{
-   margin: 0 3px 10px 3px;
- }
-.star{
-  padding: 15px 30px 15px 30px !important;
-  margin-top: 10px;
-}
- .star p {
-  margin-left: 0;
-}
- .title {
-  text-align: center;
-}
- .title h1 {
-  font-size: 2rem;
-} 
+  .stars {
+    text-align: center;
+  }
+  .star img {
+    margin: 0 3px 10px 3px;
+  }
+  .star {
+    padding: 15px 30px 15px 30px !important;
+    margin-top: 10px;
+  }
+  .star p {
+    margin-left: 0;
+  }
+  .title {
+    text-align: center;
+  }
+  .title h1 {
+    font-size: 2rem;
+  }
   .title p {
     font-size: 0.8rem;
   }
-  .row1{
+  .row1 {
     margin: 2rem !important;
   }
-  .row2{
-    margin:0 2rem !important;
-
+  .row2 {
+    flex-wrap: wrap;
+    margin: 0 2rem !important;
   }
-  .row1 .col-1{
+  .row1 .col-1 {
     padding-right: 0;
   }
-  .card{
+  .card {
     margin-top: 20px;
   }
 }
 
 /*-------------*/
 .row2 {
-height: 300px;
-  margin: 0 150px;
+  margin-top: 80px;
+  height: 17rem;
   display: flex;
-  justify-content: space-between;
-  flex-wrap:wrap;
- 
 }
 
 
 .row2 .col-1 {
-  /* flex-grow: 1; */
-  /* flex-basis: 26rem; */
   align-self: flex-start;
-
 }
 
-
-.card{
-  padding: 40px;
+.card {
+  padding: 2rem;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   background-color: var(--verydark);
   border-radius: 15px;
-
 }
-.card-header{
+.card-header {
   display: flex;
   align-items: center;
 }
 
-.card .card-header p:first-child{
+.card .card-header p:first-child {
   color: var(--lightgrayish);
   font-weight: 600;
 }
 
-.card .card-header p:last-child{
+.card .card-header p:last-child {
   color: var(--softpink);
-margin-top: 3px;
+  margin-top: 3px;
   font-weight: 500;
 }
-.card .card-header img{
+.card .card-header img {
   border-radius: 50%;
   width: 3rem;
   margin-right: 30px;
 }
 
-.card-body{
+.card-body {
   color: var(--lightgrayish);
   font-weight: 500;
   margin-top: 30px;
   line-height: 1.3rem;
 }
-.card-s{
-  flex-basis: 23rem;
-}
+
 .row2 .col-2 {
-
-  /* flex-grow: 1; */
   align-self: center;
-
 }
 .row2 .col-3 {
-  /* flex-basis: 26rem; */
-  /* flex-grow: 1; */
   align-self: flex-end;
-
 }
-
