--- a/vue/style.css
+++ b/vue/style.css
@@ -1,3 +1,15 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+html {
+    margin: 20px;
+    font-family: 'Cambay', sans-serif;
+}
+
 .box {
     background-color: red;
     width: 200px;
@@ -23,16 +35,6 @@ button {
     cursor: pointer;
 }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    margin: 20px;
-}
-
 .mobile-menu-container {
     background-color: aqua;
     padding: 10px 0;
@@ -49,4 +51,27 @@ html {
     margin: 5px;
     border-bottom: gray 1px solid;
     padding-bottom: 10px;
+}
+
+input {
+    display: block;
+    padding: 10px;
+}
+
+button.submit {
+    margin-top: 10px;
+    background-color: rgb(99, 169, 169);
+    padding: 15px 30px;
+    color: white;
+    font-weight: 600;
+    border-radius: 15px;
+}
+
+form h1 {
+    margin: 20px 0;
+    font-size: 30px;
+}
+
+.input-form {
+    margin-top: 1000px;
 }
